# mist

./: .credentials-default  .gitignore  .gitmodules  CMakeLists.txt  README.md  nvs-defaults.csv  partitions.csv  sdkconfig  sdkconfig.defaults
components/nanopb/: CMakeLists.txt
components/nanopb/proto_generated/: messages.pb.c  messages.pb.h
components/nanopb/scripts/: proto_compile.sh
components/time_sync/: CMakeLists.txt  time_sync.c
main/: CMakeLists.txt  comm.c  comm.h  espnow.c  espnow.h  idf_component.yml  main.c  mqtt.c  mqtt.h  nvs.c  nvs.h  time_sync.c  time_sync.h  wifi.c  wifi.h
proto/: message.options  message.proto  messages.proto  sensor_reading.proto
scripts/: flash_credentials.py  proto_compile.py  proto_compile.sh
